# tron-wallpaper-windows

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  composite.frag  downsample.frag  fragment_shader.frag  geometry_shader.geom  imgui.ini  light_cycle_fragment_shader.frag  light_cycle_geometry_shader.geom  light_cycle_vertex_shader.vert  lively rain window styles.txt  tron_config.ini  upsample.frag  vertex_shader.vert  vertex_shader2.vert  yellow_fragment_shader.frag
include/: bloom_renderer.hpp  capsule.hpp  config.hpp  light_cycle.hpp  shader.hpp  shader_utils.hpp  tetrahedron.hpp  wallpaper_utils.hpp
src/: bloom_renderer.cpp  capsule.cpp  light_cycle.cpp  main.cpp  mcp.cpp  shader.cpp  shader_utils.cpp  tetrahedron.cpp  wallpaper_utils.cpp
